=========1.4.32b================
- Bugfix: the default setting for RepeatPV had become false again...
=========1.4.31b================
- Bugfix: improper handling of vararg function.
=========1.4.30b================
- Some more meaningful error messages added.
- Some buffer overflow checks added.
- Simplification of strange signal kludge in gui.c. 
- Removal of obsolete code in engine.c and gui.c. Platform specific code has been abstracted and pushed into pipex_win32.c and pipex_posix.c
- The format of the version number has changed once again. Debian was unhappy with the previous one.
=========1.4b29================
- Conversion from C++ to C (suggested by E.M.)
- More refactoring. The win32 and posix I/O now have a uniform interface (see pipex.h). 
=========1.4b28================
- Some comments added to explain the exact behaviour of some of the public functions in pipe.cpp. 
- LineInput now returns a bool which is FALSE in case of EOF. 
=========1.4b27================
- Option "ScoreWhite" : report score from white's point of view (suggested by E.M.).
- Option "KibitzInterval" : try to wait this many seconds between kibitzes (suggested by E.M.)
=========1.4b26================
- Contraction of version number.
- Log if SetProcessAffinityMask is not available (suggested by E.M.).
- pipe.cpp : Make PipeStruct a proper class with private/public members.
- Check for EOF in GUI input.
- pipe.cpp : delay reporting EOF until buffer is empty.
- Messages from the Engine to PG were not logged in the windows version.
=========1.4w10UCIb24===========
- Portability fixes for WIN9X (Eric Mullins).
- Portability fixes for MSVC++ (Eric Mullins).
- Default setting of RepeatPV is now true.
- Do not read data if input buffer is full (Windows).
=========1.4w10UCIb22===========
- Polyglot now completely poll free...
=========1.4w10UCIb21===========
- Crash bug in memory command fixed
- Small optimizations
=========1.4w10UCIb20===========
- More refactoring.