@@ -519,6 +519,17 @@ In that case the output of PolyGlot would be inconsistent.
 When RepeatPV is false PolyGlot does not repeat the last pv string.
 Due to the way kibitzing is implemented, KibitzMove is disabled in that case. 
 
+=item B<WbWorkArounds> (default: false)
+
+The intention of this option is to provide work arounds for
+xboard/winboard bugs should they arise.  Currently it only prevents
+"feature option=" commands which contain "Draw" in their name from
+being sent to the GUI. Some versions of xboard/winboard contain a bug
+which causes such options to be interpreted as draw claims by the
+engine.
+
+Engines that send options with "Draw" in their name are Rybka and HIARCS. 
+
 =back
 
 
